--- a/CSS/Components/Input/input.css
+++ b/CSS/Components/Input/input.css
@@ -34,5 +34,5 @@
 }
 
 .input-err{
-    color: var(--danger);
+    color: var(--danger-err);
 }
