--- a/CSS/Components/List/list.css
+++ b/CSS/Components/List/list.css
@@ -17,6 +17,7 @@
 
 .active {
   background-color: var(--primary-color);
+  color: var(--btn-primary-text);
 }
 
 .disabled {
